[tool.poetry]
name = "7b-sqlmaster"
version = "0.1.0"
description = ""
authors = ["jjovalle <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "^1.31.1"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
pandasql = "^0.7.3"
llama-index = "^0.10.17"
llama-index-llms-sagemaker-endpoint = "^0.1.3"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
isort = "^5.13.2"
black = "^24.2.0"


[tool.poetry.group.deploy_model.dependencies]
sagemaker = "^2.212.0"
boto3 = "^1.34.58"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
